--- a/package.json
+++ b/package.json
@@ -11,8 +11,23 @@
     "test": "node test.js"
   },
   "dependencies": {
-    "ejs": "^2.5.6",
-    "express": "^4.15.2"
+    "body-parser": "^1.19.0",
+    "cheerio": "^1.0.0-rc.3",
+    "cors": "^2.8.5",
+    "ejs": "^2.5.7",
+    "express": "^4.17.1",
+    "express-http-to-https": "^1.1.3",
+    "express-https-redirect": "^1.0.0",
+    "frameguard": "^3.0.0",
+    "moment": "^2.24.0",
+    "mongojs": "^3.1.0",
+    "mongoose": "^5.8.3",
+    "node-cron": "^2.0.3",
+    "puppeteer": "^2.0.0",
+    "request": "^2.88.0",
+    "shelljs": "^0.8.3",
+    "winston": "^3.2.1",
+    "winston-daily-rotate-file": "^4.4.0"
   },
   "devDependencies": {
     "got": "^11.3.0",
